deployment/ansible/roles/leader/templates/traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: traefik-dashboard
    namespace: kube-system
spec:
    entryPoints:
        - web
    routes:
        # temporary workaround for traefik bug (interoperability with ingress)
        -   kind: Rule
            match: Host(`traefik.frank.elsinga.de`) && PathPrefix(`/.well-known/acme-challenge/`)
            priority: 12
            services:
                -   name: cm-acme-http-solver-kwk2j
                    port: 8089
                    kind: Service
        -   match: Host(`traefik.frank.elsinga.de`)
            kind: Rule
            services:
                -   name: noop@internal
                    kind: TraefikService
            middlewares:
                -   name: redirect-to-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: traefik-dashboard-http
    namespace: kube-system
spec:
    entryPoints:
        - websecure
    routes:
        # temproary workaround for traefik bug (interoperability with ingress)
        -   kind: Rule
            match: Host(`traefik.frank.elsinga.de`) && PathPrefix(`/.well-known/acme-challenge/`)
            priority: 12
            services:
                -   name: cm-acme-http-solver-kwk2j
                    port: 8089
                    kind: Service
        -   match: Host(`traefik.frank.elsinga.de`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
            kind: Rule
            priority: 10
            services:
                -   name: api@internal
                    kind: TraefikService
            middlewares:
                -   name: auth
        -   match: Host(`traefik.frank.elsinga.de`)
            kind: Rule
            priority: 9
            services:
                -   name: noop@internal
                    kind: TraefikService
            middlewares:
                -   name: redirect-to-dashboard
    tls:
        secretName: traefik.frank.elsinga.de
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
    name: redirect-to-https
    namespace: kube-system
spec:
    redirectScheme:
        scheme: https
        permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
    name: redirect-to-dashboard
    namespace: kube-system
spec:
    redirectRegex:
        regex: ^https://traefik.frank.elsinga.de/(.*)
        replacement: https://traefik.frank.elsinga.de/dashboard/

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
    name: traefik-auth
    namespace: kube-system
spec:
    basicAuth:
        secret: traefik-login
